--- a/src/template.html
+++ b/src/template.html
@@ -7,9 +7,10 @@
   </head>
   <body>
     <div class="container">
+      <img alt="Laughing image" id="laughImg" />
       <h3>Don't Laugh Challenge</h3>
       <div id="joke" class="joke"></div>
-      <div id="jokeBtn" class="btn">Get Another Joke</div>
+      <button id="jokeBtn" class="btn">Get Another Joke</button>
     </div>
   </body>
 </html>
